--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
 	"files.associations": {
 		"iostream": "cpp",
-		"iosfwd": "cpp"
+		"iosfwd": "cpp",
+		"array": "cpp",
+		"string_view": "cpp"
 	}
 }
