--- a/configs/default.conf
+++ b/configs/default.conf
@@ -1,27 +1,31 @@
-server {
-    listen 8002;
-    root docs/fusion_web/;
-    client_max_body_size 3000000;
-    error_page 404 error_pages/404.html;
+server
+{
+	listen 8002;
+	location /
+	{
+		allow_methods  DELETE POST GET;
+		root docs/fusion_web/;
+		client_max_body_size 3000000;
+		error_page 404 error_pages/404.html;
+		autoindex off;
+	}
+	
+	location /tours
+	{
+		autoindex on;
+		index tours1.html;
+		allow_methods GET POST PUT HEAD;
+	}
 
-    location / {
-        allow_methods  DELETE POST GET;
-        autoindex off;
-    }
-    
-    location /tours {
-        autoindex on;
-        index tours1.html;
-        allow_methods GET POST PUT HEAD;
-    }
-
-	location /red {
+	location /red
+	{
 		return /tours;
 	}
 
-    location /cgi-bin {
-        root ./;
-        allow_methods GET POST DELETE;
-        cgi_ext .py .sh;
-    }
+	location /cgi-bin
+	{
+		root ./;
+		allow_methods GET POST DELETE;
+		cgi_ext .py .sh;
+	}
 }
