--- a/configs/default.conf
+++ b/configs/default.conf
@@ -6,14 +6,13 @@ server
 		allow_methods  DELETE POST GET;
 		root docs/fusion_web/;
 		client_max_body_size 3000000;
-		error_page 404 error_pages/404.html;
+		error_page 404 500 error_pages/404.html;
 		autoindex off;
 	}
 	
 	location /tours
 	{
 		autoindex on;
-		index tours1.html;
 		allow_methods GET POST PUT HEAD;
 	}
 
@@ -21,7 +20,6 @@ server
 	{
 		return /tours;
 	}
-
 	location /cgi-bin
 	{
 		root ./;
