--- a/configs/default.conf
+++ b/configs/default.conf
@@ -3,7 +3,7 @@ server
 	listen 8002;
 	location /
 	{
-		root ./www/;
+		root ./www/default/;
 		allow_methods  DELETE POST GET;
 		client_max_body_size 3000000;
 		error_page 404 500 ./www/error_pages/404.html;
