--- a/configs/default.conf
+++ b/configs/default.conf
@@ -33,9 +33,9 @@ server
 
 	location /cgi-bin
 	{
-		root ./;
+		root ./www/default/;
 		allow_methods GET POST DELETE;
-		cgi_ext .py .sh;
+		cgi .py /usr/bin/python3;
 	}
 	location /post
 	{
