--- a/configs/default.conf
+++ b/configs/default.conf
@@ -37,7 +37,7 @@ server
 		allow_methods GET POST DELETE;
 		cgi .py /usr/bin/python3;
 		cgi .php /usr/bin/php;
-		cgi .out;
+		cgi .sh;
 	}
 	location /post
 	{
