MORE TESTS (cgi on corr)

--- a/configs/test.conf
+++ b/configs/test.conf
@@ -6,18 +6,27 @@ server
 		alias /;
 		allow_methods  GET;
 		root		./YoupiBanane;
+		cgi .py python3;
+		cgi .sh;
+		cgi .bla ./ubuntu_cgi_tester;
 	}
 	location /put_test/
 	{
 		alias /;
 		allow_methods  POST;
 		post_directory ./www/YoupiBanane/;
+		cgi .py python3;
+		cgi .sh;
+		cgi .bla .blu ./ubuntu_cgi_tester;
 	}
 	location /post_body/ 
 	{
 		alias /;
 		allow_methods  POST;
 		client_max_body_size 100;
+		cgi .py python3;
+		cgi .sh;
+		cgi .bla ./ubuntu_cgi_tester;
 	}
 	location /directory/
 	{
